--- a/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
+++ b/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
@@ -26,19 +26,20 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    
+  </PropertyGroup>
+
+	<PropertyGroup>
     <!-- 
     We need to prevent the KubeOps build targets from trying to call the non-existent
     program entrypoint (due to this assembly being a Library) to generate the CRDs
     and other installation related files.
     -->
-  
     <KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
     <KubeOpsSkipCrds>true</KubeOpsSkipCrds>
     <KubeOpsSkipRbac>true</KubeOpsSkipRbac>
     <KubeOpsSkipOperator>true</KubeOpsSkipOperator>
     <KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
-  </PropertyGroup>
+	</PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\LICENSE" Link="LICENSE">
