--- a/Tools/neon-cli/neon-cli.csproj
+++ b/Tools/neon-cli/neon-cli.csproj
@@ -91,19 +91,8 @@
     </None>
   </ItemGroup>
 	
-	<!-- 
-	$debug(jefflill): RESTORE THIS AFTER FIGURING OUT WHY THIS IS HANGING
-	
-	This is probably due to KubeOps trying to call the generator command.
-	
-	We'll need to change "-x-no-cmd" below back to a normal option since we
-	couldn't comment it out as is.
-	-->
-
-  <!--
-	<Target Name="PubCore" AfterTargets="AfterBuild">
-    <Exec Command="pubcore -x-no-cmd &quot;$(ProjectPath)&quot; &quot;$(TargetName)&quot; $(ConfigurationName) &quot;$(OutDir.TrimEnd('\'))&quot; &quot;$(NF_BUILD)&quot; win10-x64" />
+  <Target Name="PubCore" AfterTargets="AfterBuild">
+    <Exec Command="pubcore --no-cmd &quot;$(ProjectPath)&quot; &quot;$(TargetName)&quot; $(ConfigurationName) &quot;$(OutDir.TrimEnd('\'))&quot; &quot;$(NF_BUILD)&quot; win10-x64" />
   </Target>
-	-->
 
 </Project>
