[neon-node-agent]: ClusterRegistry operator works!

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -30,6 +30,7 @@ spec:
     spec:
       serviceAccountName: neon-node-agent
       hostPID: true
+      hostNetwork: true
       tolerations:
       - operator: Exists
       volumes:
