--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
@@ -429,7 +429,7 @@ dashboardsConfigMaps: {}
 grafana.ini:
   database:
     type: postgres
-    host: db-citus-postgresql.neon-system.svc.cluster.local
+    host: neon-system-db.neon-system.svc.cluster.local
     name: grafana
     user: neon_service
     password: $__env{DATABASE_PASSWORD}
