--- a/Tools/neon-cli/neon-cli.csproj
+++ b/Tools/neon-cli/neon-cli.csproj
@@ -15,21 +15,24 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
 
-	<PropertyGroup>
-		<!-- 
+	<PublishSingleFile>true</PublishSingleFile>
+	<SelfContained>true</SelfContained>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+
+	<!-- 
     We need to prevent the KubeOps build targets from trying to call the program
     entrypoint to generate the CRDs and other installation related files.
     -->
-		<KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
-		<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
-		<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
-		<KubeOpsSkipOperator>true</KubeOpsSkipOperator>
-		<KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
-	</PropertyGroup>
+	  
+	<KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
+	<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
+	<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
+	<KubeOpsSkipOperator>true</KubeOpsSkipOperator>
+	<KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
+  </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
