[neon-node-agent]: ContainerRegistry environment variables

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -47,6 +47,12 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: CONTAINERREGISTRY_RECONCILE_REQUEUE_INTERVAL
+          value: 5m
+        - name: CONTAINERREGISTRY_MODIFIED_REQUEUE_INTERVAL
+          value: 5m
+        - name: CONTAINERREGISTRY_ERROR_DELAY
+          value: 1m
         envFrom:
         - configMapRef:
             name: neon-node-agent-webhook
