set GOGC for some memory hungry services

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
@@ -42,6 +42,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
+        - name: GOGC
+          value: "10"
         image: "{{ .Values.agent.image.organization }}/{{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag }}"
         imagePullPolicy: IfNotPresent
         ports:
