glauth now uses postgres as backend

--- a/Lib/Neon.Kube.Setup/Resources/Helm/glauth/templates/secrets.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/glauth/templates/secrets.yaml
@@ -5,5 +5,29 @@ metadata:
   labels:
   name: glauth-users
 stringData:
-  root: {{ .Values.users.root.password }}
-  serviceuser: {{ .Values.users.serviceuser.password }}
+  root: |
+    name: root
+    uidNumber: 5001
+    primaryGroup: 5501
+    password: {{ .Values.users.root.password }}
+  serviceuser: |
+    name: serviceuser
+    uidNumber: 5004
+    primaryGroup: 5502
+    password: {{ .Values.users.serviceuser.password }}
+    capabilities:
+      action: search
+      object: "*"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  labels:
+  name: glauth-groups
+stringData:
+  superadmin: |
+    name: superadmin
+    gidNumber: 5001
+  admin: |
+    name: admin
+    gidNumber: 5002
