--- a/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  organization: neon-registry.node.local
-  repository: glauth-glauth
+  organization: docker.io/glauth
+  repository: glauth-plugins
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v2.1.0-rc1"
@@ -90,7 +90,15 @@ config:
   ldaps:
     enabled: false
   backend:
-    datastore: "config"
+    datastore: "plugin"
+    plugin: "/app/postgres.so"
+    pluginhandler: NewPostgresHandler
+    database:
+      host: neon-system-db
+      port: "5432"
+      dbname: glauth
+      user: neon_service
+      password: password
     baseDN: "dc=cluster,dc=neoncluster,dc=io"
     nameformat: "cn"
     groupformat: "ou"
