some glauth fixes

--- a/Lib/Neon.Kube.Setup/Resources/Helm/glauth/templates/secrets.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/glauth/templates/secrets.yaml
@@ -16,8 +16,8 @@ stringData:
     primaryGroup: 5502
     password: {{ .Values.users.serviceuser.password }}
     capabilities:
-      action: search
-      object: "*"
+      - action: search
+        object: "*"
 ---
 apiVersion: v1
 kind: Secret
