--- a/Services/neon-node-agent/neon-node-agent.csproj
+++ b/Services/neon-node-agent/neon-node-agent.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <PackageReference Include="KubeOps" Version="6.2.1" />
+    <PackageReference Include="Tomlyn" Version="0.3.1" />
   </ItemGroup>
 
   <ItemGroup>
