--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -30,7 +30,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/path: "/"
-        prometheus.io/port: "9402"
+        prometheus.io/port: "9762"
     spec:
       serviceAccountName: neon-node-agent
       hostPID: true
@@ -88,8 +88,8 @@ spec:
           periodSeconds: 5
           timeoutSeconds: 1
         ports:
-        - containerPort: 5000
-          name: http
+        - name: http
+          containerPort: 5000
         - name: http-metrics
           containerPort: 9762
           protocol: TCP
