--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -53,10 +53,16 @@ spec:
               fieldPath: metadata.namespace
         - name: CONTAINERREGISTRY_RECONCILE_REQUEUE_INTERVAL
           value: 5m
-        - name: CONTAINERREGISTRY_MODIFIED_REQUEUE_INTERVAL
+        - name: CONTAINERREGISTRY_ERROR_MIN_REQUEUE_INTERVAL
+          value: 15s
+        - name: CONTAINERREGISTRY_ERROR_MAX_REQUEUE_INTERVAL
+          value: 10m
+        - name: NODETASK_RECONCILE_REQUEUE_INTERVAL
           value: 5m
-        - name: CONTAINERREGISTRY_ERROR_DELAY
-          value: 1m
+        - name: NODETASK_ERROR_MIN_REQUEUE_INTERVAL
+          value: 15s
+        - name: NODETASK_ERROR_MAX_REQUEUE_INTERVAL
+          value: 10m
         envFrom:
         - configMapRef:
             name: neon-node-agent-webhook
