--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/values.yaml
@@ -29,8 +29,8 @@ resource:
 
 logLevel: info
 
-#==============================================================================
-# WARNING: BE SURE TO COMMENT THIS OUT FOR PRODUCTION!
+###############################################################################
+# WARNING: BE SURE TO COMMENT THIS OUT BEFORE CHECING INTO MASTER!
 #
 # $debug(): DEBUG related configurations.
 
