--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
@@ -34,7 +34,7 @@ resource:
 logLevel: info
 
 ###############################################################################
-# WARNING: BE SURE TO COMMENT THIS OUT BEFORE CHECING INTO MASTER!
+# WARNING: BE SURE TO COMMENT THIS OUT BEFORE PUSHING TO MASTER!
 #
 # $debug(): DEBUG related configurations.
 
