--- a/Services/neon-dashboard/neon-dashboard.csproj
+++ b/Services/neon-dashboard/neon-dashboard.csproj
@@ -46,6 +46,6 @@
     <Exec Command="sass --version" ContinueOnError="true">
       <Output TaskParameter="ExitCode" PropertyName="ErrorCodeSass" />
     </Exec>
-    <Error Condition="'$(ErrorCodeSass)' != '0'" Text="Dart-sass is required for this project. Install globally with 'npm i -g sass' " />
+    <Error Condition="'$(ErrorCodeSass)' != '0'" Text="dart-sass is required for this project. https://github.com/sass/dart-sass/releases" />
   </Target>
 </Project>
