--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/console-deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/console-deployment.yaml
@@ -53,6 +53,9 @@ spec:
             name: https
           args:
           - server
+          envFrom:
+            - configMapRef:
+                name: {{ include "minio-operator.console-fullname" . }}
           env:
           - name: ACCESS_KEY
             valueFrom:
@@ -66,10 +69,6 @@ spec:
                 key: secretkey
           - name: CONSOLE_OPERATOR_MODE
             value: "on"
-          - name: CONSOLE_IDP_URL
-            value: "https://sso.{{ .Values.cluster.domain }}/.well-known/openid-configuration" 
-          - name: CONSOLE_IDP_CALLBACK
-            value: "https://{{ .Values.ingress.operator.subdomain }}.{{ .Values.cluster.domain }}/oauth_callback"
           - name: CONSOLE_IDP_CLIENT_ID
             value: minio
           - name: CONSOLE_IDP_SECRET
