--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - configMapRef:
+                name: {{ include "neon-dashboard.fullname" . }}
           ports:
             - name: http-web
               containerPort: {{ .Values.service.port }}
