add port protocol prefix

--- a/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/templates/daemonset.yaml
@@ -84,7 +84,7 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ .Values.settings.prometheus_port }}
-              name: exporter
+              name: http-exporter
           resources:
           {{- toYaml .Values.resources | nindent 12 }}
       {{- if .Values.extraContainers }}
