--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
@@ -17,3 +17,16 @@ spec:
             host: {{ include "neon-dashboard.fullname" . }}.neon-system.svc.cluster.local
             port:
               number: {{ .Values.service.port }}
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+    name: neon-dashboard
+spec:
+  host: {{ include "neon-dashboard.fullname" . }}
+  trafficPolicy:
+    loadBalancer:
+      consistentHash: 
+        httpCookie:
+          name: X-User-Session
+          ttl: 0s
