--- a/Services/neon-dashboard/neon-dashboard.csproj
+++ b/Services/neon-dashboard/neon-dashboard.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Analytics" Version="3.8.0" />
     <PackageReference Include="Blazor-Analytics" Version="3.10.0" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
 	<PackageReference Include="GitInfo" Version="2.2.0">
 		<PrivateAssets>all</PrivateAssets>
