set port protocol

--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/neon-system-db.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/neon-system-db.yaml
@@ -146,6 +146,7 @@ spec:
     ports:
     - name: http-metrics
       containerPort: {{ .Values.metrics.port }}
+      protocol: TCP
     env:
     - name: DATA_SOURCE_URI
       value: localhost/postgres?sslmode=disable
