renamed node-problem-detector dash

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/dashboards/node-problem-detector.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/dashboards/node-problem-detector.yaml
@@ -1,7 +1,7 @@
 apiVersion: integreatly.org/v1alpha1
 kind: GrafanaDashboard
 metadata:
-  name: 1-node-exporter
+  name: node-problem-detector
   labels:
     app: grafana
 spec:
